# Arbiter

./: .gitignore  .skills.yaml  CHANGELOG.md  README.md  agent-permissions-app-spec.md  package-lock.json  package.json
.agents/skills/_system/: SKILL.md
.agents/skills/zod-v4-patterns/: meta.yaml
.claude/skills/: SKILLS_INDEX.md
.claude/skills/_system/: SKILL.md
.claude/skills/changelog/: meta.yaml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: main.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: backup.rs  commands.rs  fs.rs  main.rs  validation.rs
apps/desktop/src/app/: App.tsx  routes.tsx
apps/desktop/src/components/: ErrorBoundary.tsx
apps/desktop/src/components/diff/: DiffView.tsx
apps/desktop/src/components/file/: OpenInFinderButton.tsx
apps/desktop/src/components/layout/: AgentSwitcher.tsx  AppHeader.tsx  AppShell.tsx  AppSidebar.tsx  Breadcrumbs.tsx  RepoSelector.tsx
apps/desktop/src/components/ui/: StatusPill.tsx  (+26 more)
apps/desktop/src/lib/: permittedBashCommands.ts  shortcuts.ts  tauriClient.ts  updaterClient.ts  usePeriodicUpdateCheck.ts  viewModels.ts
apps/desktop/src/stores/: useEditorStore.ts  useUIStore.ts  useWorkspaceStore.ts
apps/desktop/src/styles/: globals.css  tokens.css
docs/: adapter-authoring.md  product-spec.md  security-model.md  supported-agents.md
scripts/: publish-macos.mjs  tauri.mjs
scripts/publish-macos/: helpers.mjs  helpers.test.mjs
(+10 files in other folders)
