[package]
name = "agent-permissions-editor"
version = "0.1.0"
description = "Local-first editor for AI agent permission files"
authors = ["Agent Permissions Editor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
